@@ -68,7 +68,6 @@ TAR_FLAGS = czf
 
 BIN = icq2tcp
 USERSH = eicq-user-install.sh
-#OBJECTS = eicq.elc eicq-toolbar.elc eicq-report.elc 
 SOURCES = eicq.el eicq-toolbar.el eicq-report.el eicq-convert.el
 OBJECTS = $(SOURCES:.el=.elc)
 EXTRA_SRC = ChangeLog INSTALL NEWS README TODO
